--- a/css/main.less
+++ b/css/main.less
@@ -47,6 +47,16 @@ body
 		font-weight:300;
 		font-size:32px;
 	}
+	a
+	{
+		color:#10678e;
+		text-decoration:none;
+		font-weight:700;
+		&:hover
+		{
+			color:#808080;
+		}
+	}
 	.work-container
 	{
 		.thumb-row
