--- a/css/main.less
+++ b/css/main.less
@@ -1,4 +1,4 @@
-﻿@black:#1e1f1f;
+﻿@black:#333;
 @white:#fff;
 @font-1: 'Quicksand', sans-serif;
 @font-2: 'Open Sans', sans-serif;
@@ -13,7 +13,7 @@ body
 	.logo
 	{
 		display:block;
-		width:200px;
+		width:120px;
 		margin:120px auto;
 	}
 	.intro
