--- a/css/main.css
+++ b/css/main.css
@@ -49,12 +49,16 @@
   margin: 10px;
   cursor: pointer;
 }
+#work .work-container .thumb-row .thumb img {
+  border-radius: 110px;
+}
 #work .work-container .thumb-row .thumb .overlay {
   position: absolute;
   top: 0;
   width: 220px;
   line-height: 220px;
   opacity: 0;
+  border-radius: 110px;
 }
 #work .work-container .thumb-row .thumb .overlay:hover {
   opacity: 1;
