--- a/css/main.less
+++ b/css/main.less
@@ -74,6 +74,10 @@ body
 				float:left;
 				margin:10px;
 				cursor:pointer;
+				img
+					{
+					border-radius:110px;
+					}
 				.overlay
 				{
 					position:absolute;
@@ -81,6 +85,8 @@ body
 					width: @thumb-size;
 					line-height: @thumb-size;
 					opacity:0;
+					
+					border-radius:110px;
 					&:hover
 					{
 						opacity:1;
