--- a/css/main.less
+++ b/css/main.less
@@ -1,179 +1,77 @@
-﻿@black:#333;
-@white:#fff;
-@font-1: 'Quicksand', sans-serif;
-@font-2: 'Open Sans', sans-serif;
+﻿@min-width:600px;
+@black: #121212;
+@white:#ffffff;
+
 
 body
 {
-    background:@white;
 	overflow-y:scroll;
 }
-#header
+
+
+header
 {
-	.logo
+	background:#111;
+	background-size:cover;
+	min-width:@min-width;
+	.container
 	{
-		display:block;
-		width:120px;
-		margin:120px auto;
+		position:relative;
+		height:100vh;
 	}
-	.intro
-	{
-		font-family: @font-1;
-		margin:0 auto;
-		text-align:center;
-	}
-}
-#main
-{
-}
-
-
-.container
-{
-    width:960px;
-    margin:0 auto;
-    padding:20px;
-}
-
-
-
-
-@thumb-size: 220px;
-#work
-{ 
-	padding:80px 0;
 	h1
 	{
-		font-family: @font-1;
+		top:0;
+		margin:0;
+		position:absolute;
+		width:100%;
+		font-family: "ff-good-headline-web-pro-con", sans-serif;
+		font-size:86px;
 		text-align:center;
-		margin-bottom:40px;
-		font-weight:300;
-		font-size:32px;
-	}
-	a
-	{
-		color:#10678e;
-		text-decoration:none;
-		font-weight:700;
-		&:hover
-		{
-			color:#808080;
+		letter-spacing: -.02em;
+		line-height:.5em;
+		vertical-align:middle;
+		color:#e90b02;
+		@media (min-width: @min-width)
+		{	
+			font-size:14vw;
 		}
-	}
-	.work-container
-	{
-		.thumb-row
+		#title
 		{
-			.clearfix;
-			.thumb
-			{
-				position:relative;
-				background:#fff;
-				width: @thumb-size;
-				height: @thumb-size;
-				float:left;
-				margin:10px;
-				cursor:pointer;
-				img
-					{
-					border-radius:110px;
-					}
-				.overlay
-				{
-					position:absolute;
-					top:0;
-					width: @thumb-size;
-					line-height: @thumb-size;
-					opacity:0;
-					
-					border-radius:110px;
-					&:hover
-					{
-						opacity:1;
-					}
-					.overlay-text
-					{
-						width:~"calc(100% - 20px)";
-						padding:0 10px;
-						display:inline-block;
-						vertical-align:middle;
-						text-align:center;
-						line-height:1em;
-						font-family: @font-1;
-						font-size:30px;
-					}
-				}
-			}
-		}
-		.detail-container
-		{
-			.thumb-pointer
-			{
-				width: 0; 
-				height: 0; 
-				border-left: 10px solid transparent; 
-				border-right: 10px solid transparent; 
-				border-bottom: 20px solid @black;
-				margin-top:40px;
-					&[data-column="0"]
-					{
-						margin-left:110px;
-					}
-					&[data-column="1"]
-					{
-						margin-left:350px;
-					}
-					&[data-column="2"]
-					{
-						margin-left:590px;
-					}
-					&[data-column="3"]
-					{
-						margin-left:830px;
-					}
-			}
-			.detail
-			{
-				width:700px;
-				margin:0 auto;
-				padding:40px 20px;
-				margin-bottom:80px;
-				border-top:1px solid @black;
-				border-bottom:1px solid @black;	
-				.text
-				{
-					font-family: @font-2;
-					font-size:16px;
-					color:@black;
-					margin-bottom:80px;
-				}
-				.slides
-				{
-					img
-					{
-						display:block;
-						max-width:100%;
-						margin:0 auto 40px;
-					}
-				}
-			}
+			font-size:.5em;
 		}
 	}
 }
 
-
-
-
-
-.clearfix
+h2
 {
-    &:after {
-    content:" ";
-    display:block;
-    clear:both;
-    }
+	display:inline-block;
+	position:relative;
+	top:-8vh;
+	left:20px;
+	z-index:50;	
+	margin:0;
+	font-family: "museo-sans-display";
+	font-size:9vw;
+	text-align:left;
+	line-height:.8em;
+	transform:rotate(-10deg);
+	color:#0bf591;
 }
-.hidden
+
+
+
+#mech_wrap
 {
-	display:none;
+	position:absolute;
+	top:0;
+	z-index:700;
+	height:100vh;
+	width:100%;
 }
+
+/*#about
+{
+	height:100vh;
+	width:100%;
+}*/
