--- a/css/main.less
+++ b/css/main.less
@@ -11,13 +11,15 @@ body
 
 header
 {
-	background:#111;
+	/*background:#14ed76;*/
+	background:#0a0c2a;
 	background-size:cover;
 	min-width:@min-width;
 	.container
 	{
 		position:relative;
 		height:100vh;
+		z-index:500;
 	}
 	h1
 	{
@@ -69,6 +71,53 @@ h2
 	height:100vh;
 	width:100%;
 }
+
+#rad_gradient	
+{
+	position:absolute;
+	top:0;
+	z-index:100;
+	height:200vh;
+	width:100%;
+	background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 80%); /* FF3.6-15 */
+	background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 80%); /* Chrome10-25,Safari5.1-6 */
+	background: radial-gradient(ellipse at center, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 80%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+}
+
+#ray_poly_controller
+{
+	position:absolute;
+	top:0;
+	display:block;
+	width: 100%;
+	height: 100vh;
+	z-index:800;
+	polygon 
+	{
+		fill:@white;
+		fill-opacity:0;
+	}
+
+}
+#ray_poly 
+{
+	position:absolute;
+	top:0;
+	display:block;
+	width: 100%;
+	height: 100vh;
+	z-index:200;
+	polygon 
+	{
+		fill: @white;
+		fill-opacity:0.4;
+	}
+
+}
+
+
+
 
 /*#about
 {
