--- a/css/main.css
+++ b/css/main.css
@@ -2,15 +2,14 @@
   overflow-y: scroll;
 }
 header {
-  /*background:#14ed76;*/
-  background: #0a0c2a;
+  background: #e90b02;
   background-size: cover;
   min-width: 600px;
 }
 header .container {
   position: relative;
   height: 100vh;
-  z-index: 500;
+  z-index: 150;
 }
 header h1 {
   top: 0;
@@ -33,24 +32,25 @@ header h1 {
 header h1 #title {
   font-size: .5em;
 }
-h2 {
-  display: inline-block;
-  position: relative;
-  top: -8vh;
-  left: 20px;
-  z-index: 50;
-  margin: 0;
-  font-family: "museo-sans-display";
-  font-size: 9vw;
-  text-align: left;
-  line-height: .8em;
-  transform: rotate(-10deg);
-  color: #0bf591;
-}
+/*h2
+{
+	display:inline-block;
+	position:relative;
+	top:-8vh;
+	left:20px;
+	z-index:50;	
+	margin:0;
+	font-family: "museo-sans-display";
+	font-size:9vw;
+	text-align:left;
+	line-height:.8em;
+	transform:rotate(-10deg);
+	color:#0bf591;
+}*/
 #mech_wrap {
   position: absolute;
   top: 0;
-  z-index: 700;
+  z-index: 180;
   height: 100vh;
   width: 100%;
 }
@@ -58,13 +58,13 @@ h2 {
   position: absolute;
   top: 0;
   z-index: 100;
-  height: 200vh;
+  height: 100vh;
   width: 100%;
-  background: -moz-radial-gradient(center, ellipse cover, #ffffff 0%, rgba(255, 255, 255, 0) 80%);
+  /*background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 80%);*/
   /* FF3.6-15 */
-  background: -webkit-radial-gradient(center, ellipse cover, #ffffff 0%, rgba(255, 255, 255, 0) 80%);
+  /*background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 80%);*/
   /* Chrome10-25,Safari5.1-6 */
-  background: radial-gradient(ellipse at center, #ffffff 0%, rgba(255, 255, 255, 0) 80%);
+  background: radial-gradient(ellipse at bottom, #14ed76 0%, rgba(255, 255, 255, 0) 80%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#00ffffff', GradientType=1);
   /* IE6-9 fallback on horizontal gradient */
@@ -75,7 +75,7 @@ h2 {
   display: block;
   width: 100%;
   height: 100vh;
-  z-index: 800;
+  z-index: 199;
 }
 #ray_poly_controller polygon {
   fill: #ffffff;
@@ -87,14 +87,17 @@ h2 {
   display: block;
   width: 100%;
   height: 100vh;
-  z-index: 200;
+  z-index: 110;
 }
 #ray_poly polygon {
-  fill: #ffffff;
+  fill: #F2F020;
   fill-opacity: 0.4;
 }
 /*#about
 {
+	position:relative;
+	z-index:200;
 	height:100vh;
 	width:100%;
+	background:@teal;
 }*/
