--- a/css/main.less
+++ b/css/main.less
@@ -1,7 +1,9 @@
 ﻿@min-width:600px;
 @black: #121212;
 @white:#ffffff;
-
+@red:#e90b02;
+@teal:#14ed76;
+@yellow:#F2F020;
 
 body
 {
@@ -11,15 +13,14 @@ body
 
 header
 {
-	/*background:#14ed76;*/
-	background:#0a0c2a;
+	background:@red;
 	background-size:cover;
 	min-width:@min-width;
 	.container
 	{
 		position:relative;
 		height:100vh;
-		z-index:500;
+		z-index:150;
 	}
 	h1
 	{
@@ -33,7 +34,7 @@ header
 		letter-spacing: -.02em;
 		line-height:.5em;
 		vertical-align:middle;
-		color:#e90b02;
+		color:@red;
 		@media (min-width: @min-width)
 		{	
 			font-size:14vw;
@@ -45,7 +46,7 @@ header
 	}
 }
 
-h2
+/*h2
 {
 	display:inline-block;
 	position:relative;
@@ -59,7 +60,7 @@ h2
 	line-height:.8em;
 	transform:rotate(-10deg);
 	color:#0bf591;
-}
+}*/
 
 
 
@@ -67,7 +68,7 @@ h2
 {
 	position:absolute;
 	top:0;
-	z-index:700;
+	z-index:180;
 	height:100vh;
 	width:100%;
 }
@@ -77,11 +78,11 @@ h2
 	position:absolute;
 	top:0;
 	z-index:100;
-	height:200vh;
+	height:100vh;
 	width:100%;
-	background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 80%); /* FF3.6-15 */
-	background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 80%); /* Chrome10-25,Safari5.1-6 */
-	background: radial-gradient(ellipse at center, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 80%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	/*background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 80%);*/ /* FF3.6-15 */
+	/*background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 80%);*/ /* Chrome10-25,Safari5.1-6 */
+	background: radial-gradient(ellipse at bottom, rgba(20,237,118,1) 0%,rgba(255,255,255,0) 80%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 }
 
@@ -92,7 +93,7 @@ h2
 	display:block;
 	width: 100%;
 	height: 100vh;
-	z-index:800;
+	z-index:199;
 	polygon 
 	{
 		fill:@white;
@@ -107,13 +108,12 @@ h2
 	display:block;
 	width: 100%;
 	height: 100vh;
-	z-index:200;
+	z-index:110;
 	polygon 
 	{
-		fill: @white;
+		fill: @yellow;
 		fill-opacity:0.4;
 	}
-
 }
 
 
@@ -121,6 +121,9 @@ h2
 
 /*#about
 {
+	position:relative;
+	z-index:200;
 	height:100vh;
 	width:100%;
+	background:@teal;
 }*/
