--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,18 @@
-﻿body {
-  overflow-y: scroll;
+﻿.cf:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+body {
+  overflow: hidden;
 }
 header {
+  position: fixed;
   background: #e90b02;
   background-size: cover;
   min-width: 600px;
+  width: 100%;
+  z-index: 0;
 }
 header .container {
   position: relative;
@@ -32,27 +40,13 @@ header h1 {
 header h1 #title {
   font-size: .5em;
 }
-/*h2
-{
-	display:inline-block;
-	position:relative;
-	top:-8vh;
-	left:20px;
-	z-index:50;	
-	margin:0;
-	font-family: "museo-sans-display";
-	font-size:9vw;
-	text-align:left;
-	line-height:.8em;
-	transform:rotate(-10deg);
-	color:#0bf591;
-}*/
 #mech_wrap {
   position: absolute;
   top: 0;
   z-index: 180;
   height: 100vh;
   width: 100%;
+  min-width: 600px;
 }
 #rad_gradient {
   position: absolute;
@@ -60,6 +54,7 @@ header h1 #title {
   z-index: 100;
   height: 100vh;
   width: 100%;
+  min-width: 600px;
   /*background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 80%);*/
   /* FF3.6-15 */
   /*background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 80%);*/
@@ -74,6 +69,7 @@ header h1 #title {
   top: 0;
   display: block;
   width: 100%;
+  min-width: 600px;
   height: 100vh;
   z-index: 199;
 }
@@ -86,18 +82,164 @@ header h1 #title {
   top: 0;
   display: block;
   width: 100%;
+  min-width: 600px;
   height: 100vh;
   z-index: 110;
 }
 #ray_poly polygon {
-  fill: #F2F020;
+  fill: #F2F021;
   fill-opacity: 0.4;
 }
-/*#about
-{
-	position:relative;
-	z-index:200;
-	height:100vh;
-	width:100%;
-	background:@teal;
-}*/
+#about {
+  top: 100vh;
+  position: relative;
+  z-index: 200;
+  height: 10vh;
+  width: 100%;
+  min-width: 600px;
+  background: #14ed76;
+}
+#about .container {
+  padding: 20px;
+}
+h2 {
+  display: inline-block;
+  /*position:absolute;
+	top:-8vh;
+	left:20px;
+	z-index:50;*/
+  margin: 0;
+  font-family: "museo-sans-display";
+  font-size: 9vw;
+  text-align: left;
+  line-height: .8em;
+  transform: rotate(0deg);
+  color: #0bf591;
+}
+.parallax {
+  perspective: 50px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  width: 100vw;
+  height: 100vh;
+}
+.parallax_front {
+  transform: translateZ(20px) scale(0.6);
+  position: absolute;
+  z-index: 400;
+}
+.parallax_mid {
+  transform: translateZ(10px) scale(0.8);
+  position: absolute;
+  z-index: 300;
+  height: 600vh;
+}
+.parallax_back {
+  transform: translateZ(0);
+  position: absolute;
+  z-index: 200;
+  height: 600vh;
+}
+.clip_wrap {
+  position: relative;
+  overflow: hidden;
+  width: 100vw;
+  min-width: 600px;
+}
+#dino {
+  position: relative;
+  top: 40vh;
+  height: 100vh;
+}
+#dino .container {
+  -ms-transform: rotate(3deg);
+  -webkit-transform: rotate(3deg);
+  transform: rotate(3deg);
+  position: absolute;
+  top: 10vh;
+  left: -20%;
+  padding: 10vh;
+  height: 60vh;
+  width: 140vw;
+  background: #ffffff;
+}
+#dino .container .text {
+  position: relative;
+  left: 15%;
+  top: -10vh;
+  -ms-transform: rotate(-6deg);
+  -webkit-transform: rotate(-6deg);
+  transform: rotate(-6deg);
+}
+#topdosh {
+  position: relative;
+  top: 160vh;
+  height: 100vh;
+}
+#topdosh .container {
+  -ms-transform: rotate(-3deg);
+  -webkit-transform: rotate(-3deg);
+  transform: rotate(-3deg);
+  position: absolute;
+  top: 10vh;
+  left: -20%;
+  padding: 10vh;
+  height: 60vh;
+  width: 140vw;
+  background: #003470;
+}
+#topdosh .container .text {
+  position: relative;
+  left: 15%;
+  /*-ms-transform: rotate(-6deg); 
+			-webkit-transform: rotate(-6deg); 
+			transform: rotate(-6deg);*/
+}
+.image_wrap {
+  position: relative;
+  z-index: 300;
+}
+.image_wrap.dino_image {
+  left: 30%;
+  top: 170vh;
+  -ms-transform: rotate(-6deg);
+  -webkit-transform: rotate(-6deg);
+  transform: rotate(-6deg);
+}
+.image_wrap.dino_image img {
+  display: block;
+  float: left;
+  width: 30%;
+  box-shadow: rgba(40, 40, 40, 0.7) 0 5px 10px;
+}
+.image_wrap.dino_image img.front {
+  z-index: 200;
+  position: relative;
+  left: -5%;
+  top: 5vh;
+}
+.image_wrap.dino_image img.back {
+  z-index: 100;
+}
+.image_wrap.topdosh_image {
+  left: 30%;
+  top: 65vh;
+  -ms-transform: rotate(-6deg);
+  -webkit-transform: rotate(-6deg);
+  transform: rotate(-6deg);
+}
+.image_wrap.topdosh_image img {
+  display: block;
+  float: left;
+  width: 40%;
+  box-shadow: rgba(40, 40, 40, 0.7) 0 5px 10px;
+}
+.image_wrap.topdosh_image img.front {
+  z-index: 200;
+  position: relative;
+  left: -20%;
+  top: 10vh;
+}
+.image_wrap.topdosh_image img.back {
+  z-index: 100;
+}
