--- a/css/main.less
+++ b/css/main.less
@@ -25,6 +25,7 @@ body
 
 header
 {
+	/*filter:grayscale(50%);*/
 	position:fixed;
 	background:@red;
 	background-size:cover;
@@ -151,7 +152,7 @@ h2
 	color:#0bf591;
 }
 
-.parallax
+#parallax
 {
 	perspective:50px;
 	overflow-y:scroll;
@@ -213,9 +214,9 @@ h2
 			position:relative;
 			left:15%;
 			top:-10vh;
-			-ms-transform: rotate(-6deg); 
-			-webkit-transform: rotate(-6deg); 
-			transform: rotate(-6deg);
+			-ms-transform: rotate(-5deg); 
+			-webkit-transform: rotate(-5deg); 
+			transform: rotate(-5deg);
 		}
 	}
 
@@ -244,10 +245,9 @@ h2
 		{
 			position:relative;
 			left:15%;
-
-			/*-ms-transform: rotate(-6deg); 
-			-webkit-transform: rotate(-6deg); 
-			transform: rotate(-6deg);*/
+			-ms-transform: rotate(1deg); 
+			-webkit-transform: rotate(1deg); 
+			transform: rotate(1deg);
 		}
 	}
 
