--- a/css/main.less
+++ b/css/main.less
@@ -1,5 +1,5 @@
-﻿@min-width:600px;
-
+﻿@min-width:420px;
+@mid-width:720px;
 
 @black: #121212;
 @dark-gray:#363638;
@@ -7,7 +7,7 @@
 @lighter-gray:#e2e2e2;
 @white:#ffffff;
 @red:#e90b02;
-@teal:#14ed76;
+@teal:#0bf591;
 @yellow:#F2F021;
 @navy:#003470;
 
@@ -27,6 +27,7 @@ header
 {
 	/*filter:grayscale(50%);*/
 	position:fixed;
+	left:-10px;
 	background:@red;
 	background-size:cover;
 	min-width:@min-width;
@@ -45,16 +46,27 @@ header
 		position:absolute;
 		width:100%;
 		font-family: "ff-good-headline-web-pro-con", sans-serif;
-		font-size:86px;
+		font-size:68px;
 		text-align:center;
 		letter-spacing: -.02em;
 		line-height:.5em;
 		vertical-align:middle;
 		color:@red;
-		@media (min-width: @min-width)
+		@media (orientation:portrait)
+		{	
+			top:5vh;
+			@media (min-width: @min-width)
+			{
+				top:3vh;
+				font-size:16vw;
+			}
+		}
+
+		@media (min-width: @min-width) and (orientation:landscape)
 		{	
 			font-size:14vw;
 		}
+
 		#title
 		{
 			font-size:.5em;
@@ -149,8 +161,9 @@ h2
 	text-align:left;
 	line-height:.8em;
 	transform:rotate(0deg);
-	color:#0bf591;
+	color:@teal;
 }
+
 
 #parallax
 {
@@ -217,6 +230,15 @@ h2
 			-ms-transform: rotate(-5deg); 
 			-webkit-transform: rotate(-5deg); 
 			transform: rotate(-5deg);
+			h3
+			{
+				font-family: "museo-sans-display";
+				font-size:3vw;
+				text-align:left;
+				line-height:1.2em;
+				transform:rotate(-1deg);
+				color:@light-gray;
+			}
 		}
 	}
 
@@ -227,7 +249,7 @@ h2
 #topdosh
 {
 	position:relative;
-	top:160vh;
+	top:170vh;
 	height:100vh;
 	.container
 	{		
@@ -248,10 +270,66 @@ h2
 			-ms-transform: rotate(1deg); 
 			-webkit-transform: rotate(1deg); 
 			transform: rotate(1deg);
+			h3
+			{
+				font-family: "museo-sans-display";
+				font-size:3vw;
+				text-align:left;
+				line-height:1.2em;
+				transform:rotate(0deg);
+				color:@lighter-gray;
+			}
 		}
 	}
 
 }
+
+
+#twenty
+{
+	position:relative;
+	top:110vh;
+	height:100vh;
+	.container
+	{		
+		 -ms-transform: rotate(3deg); 
+		-webkit-transform: rotate(3deg); 
+		transform: rotate(3deg);
+		position: absolute;	
+		top:10vh;
+		left:-20%;
+		padding:10vh;
+		height:60vh;
+		width:140vw;
+		background:@white;	
+		.text
+		{
+			position:relative;
+			left:15%;
+			top:-10vh;
+			-ms-transform: rotate(-5deg); 
+			-webkit-transform: rotate(-5deg); 
+			transform: rotate(-5deg);
+			h2
+			{
+				font-size:10vw;
+			}
+			h3
+			{
+				position:relative;
+				top:-2vh;
+				font-family: "museo-sans-display";
+				font-size:3vw;
+				text-align:left;
+				line-height:1.2em;
+				transform:rotate(-1deg);
+				color:@light-gray;
+			}
+		}
+	}
+
+}
+
 
 .image_wrap
 {
@@ -260,10 +338,14 @@ h2
 	&.dino_image
 	{
 		left:30%;
-		top:170vh;
+		top:160vh;
 		-ms-transform: rotate(-6deg); 
 		-webkit-transform: rotate(-6deg); 
 		transform: rotate(-6deg);
+		@media (orientation:portrait)
+		{	
+
+		}
 		img
 		{
 			display:block;
@@ -286,7 +368,7 @@ h2
 	&.topdosh_image
 	{
 		left:30%;
-		top:65vh;
+		top:80vh;
 		-ms-transform: rotate(-6deg); 
 		-webkit-transform: rotate(-6deg); 
 		transform: rotate(-6deg);
@@ -306,6 +388,45 @@ h2
 			&.back
 			{				
 				z-index:100;
+			}
+		}
+	}
+	&.twenty_image
+	{
+		left:-30%;
+		top:465vh;
+		-ms-transform: rotate(-6deg); 
+		-webkit-transform: rotate(-6deg); 
+		transform: rotate(-6deg);
+		@media (orientation:portrait)
+		{	
+
+		}
+		img
+		{
+			display:block;
+			float:left;
+			box-shadow:rgba(40, 40, 40, 0.7) 0 5px 10px;
+			&.front
+			{
+				z-index:200;
+				position:relative;
+				left:10%;
+				top:-15vh;			
+				width:40%;
+			}
+			&.back
+			{				
+				z-index:100;				
+				width:30%;
+			}
+			&.mid
+			{						
+				position:relative;
+				z-index:100;			
+				left:25%;
+				top:-80vh;
+				width:32.5%;
 			}
 		}
 	}
